# Engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile_all.sh  config.h.in
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  GUIexample.cpp
examples/FirstGame/: BetterButton.hpp  CMakeLists.txt  first_game.cpp
examples/GUI/: CMakeLists.txt  GUIexample.cpp
examples/Shaker/: CMakeLists.txt  Shaker.cpp
examples/rigidBody/: CMakeLists.txt  rigidBodyExample.cpp
examples/rotation/: CMakeLists.txt  rotation.cpp
include/: Animation.hpp  Camera.hpp  Category.hpp  Command.hpp  CommandIdentifiers.hpp  CommandQueue.hpp  CommandQueue.inl  DataTables.hpp  EmitterNode.hpp  GameEntity.hpp  MusicPlayer.hpp  Particle.hpp  ParticleNode.hpp  PostEffect.hpp  RandomUtilities.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  ResourcePath.hpp  ResourceTypes.hpp  SceneNode.hpp  SoundNode.hpp  SoundPlayer.hpp  SpriteNode.hpp  State.hpp  StateCommand.hpp  StateIdentifiers.hpp  StateStack.hpp  TextNode.hpp  TileMap.hpp  Utility.hpp
include/GUI/: Button.hpp  Component.hpp  Container.hpp  InputField.hpp  Label.hpp  Slider.hpp
include/Physics/: Coordinates.hpp  RigidBody.hpp
src/: Animation.cpp  CMakeLists.txt  Camera.cpp  Command.cpp  DataTables.cpp  EmitterNode.cpp  GameEntity.cpp  MusicPlayer.cpp  ParticleNode.cpp  PostEffect.cpp  RandomUtilities.cpp  ResourcePath.cpp  SceneNode.cpp  SoundNode.cpp  SoundPlayer.cpp  SpriteNode.cpp  State.cpp  StateCommand.cpp  StateStack.cpp  TextNode.cpp  TileMap.cpp  Utility.cpp
src/GUI/: Button.cpp  Component.cpp  Container.cpp  InputField.cpp  Label.cpp  Slider.cpp
src/Physics/: RigidBody.cpp
src/buildtime/: ResourceIdentifiersGenerator.cpp
test/: CMakeLists.txt  Makefile  coordinatesTest.cpp  resourcePathTest.cpp
